# pyflared

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Dockerfile  LICENSE.txt  README.md  hatch_build.py  pyproject.toml  release-please-config.json
.github/: renovate.json5
.github/workflows/: cd.yml  cd2.yml  cd3.yml  ci.yml  publish-testpypi.yml
scripts/: build.py
src/pyflared/: A.py  B.py  __about__.py  __init__.py  _commands.py  _patterns.py  ad.py  binary.py  cli.py  cloudflared.py  commands.py  consts.py  t1.py  tunnel.py  tunnel2.py  tunnel3.py  typealias.py  types.py
src/pyflared/api/: createtunnel.py  tunnel_manager.py
src/pyflared/api_sdk/: ingress.py  parse.py  tokenized_tunnel.py  tunnel_manager.py
src/pyflared/binary/: B.py  binary.py  binary_decorator.py  context.py  decorator.py  process.py  process5.py  processE.py  processF.py  process_instance.py  reader.py  writer.py
src/pyflared/binary/trash/: A.py  B.py  process - Copy.py  process3.py  process4.py  processC.py  processD.py  processX.py
src/pyflared/binary2/: process.py
src/pyflared/binary3/: process.py
src/pyflared/binary4/: Process.py
src/pyflared/binary5/: process.py
src/pyflared/cli/: __init__.py  ssh.py  token.py  tunnel.py
src/pyflared/core/: _commands.py  helper.py  model.py  network.py  repository.py  tunnel_manager.py
src/pyflared/f1/: C.py  cloudflared.py  q.py  r.py
src/pyflared/log/: cli_config.py  config.py  config2.py  context_logger.py  intercept.py  logging_type.py
src/pyflared/manual/: a.py
src/pyflared/qe/: asw.py  t2.py
src/pyflared/qer/: qxe.py
src/pyflared/sdk/: fetch.py  monkey_patch.py
src/pyflared/shared/: _patterns.py  console.py  consts.py  contants.py  types.py
src/pyflared/ssh/: config.py  exists.py
src/pyflared/util/: async_map.py
src/pyflared/utils/: async_helper.py  dict.py  iterable.py  key.py  pydantic_parse.py  run_failover.py  set.py  type_check.py
src/pyflared/utils/asyncio/: async_Iterable.py  merge.py  transform.py  wait.py
src/pyflared/utils/db/: sqlite.py  sqlmodel.py
tests/: test_ingress.py  test_parse.py  test_simple.py
tests/binary/: test_binary.py
tests/trash/: t6.py  t7.py  wtd.py
tests/trash/old/: a.py
