[build-system]
requires = [
    "hatchling",
    "requests",
]
build-backend = "hatchling.build"

[project]
name = "pyflared"
dynamic = ["version"]
wrapper_version = 1
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
    { name = "Azmain", email = "azmainmahatab012@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "cloudflare",
]

[project.urls]
Documentation = "https://github.com/Azmain/pyflared#readme"
Issues = "https://github.com/Azmain/pyflared/issues"
Source = "https://github.com/Azmain/pyflared"


[tool.hatch.metadata.hooks.custom]
[tool.hatch.build.hooks.custom]


[tool.hatch.envs.types]
extra-dependencies = [
    "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pyflared tests}"

[tool.hatch.envs.test]
dev-mode = false
extra-dependencies = [
    "pytest"
]

[tool.coverage.run]
source_pkgs = ["pyflared", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
pyflared = ["src/pyflared", "*/pyflared/src/pyflared"]
tests = ["tests", "*/pyflared/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

