[build-system]
requires = [
    "hatchling",
    "requests",
    "klepto"
]
build-backend = "hatchling.build"

[project]
name = "pyflared"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
    { name = "Azmain", email = "azmainmahatab012@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "cloudflare",
    "aiohttp",
    "typer",
    "platformdirs",
    "rich"
]

[project.urls]
Documentation = "https://github.com/Azmain/pyflared#readme"
Issues = "https://github.com/Azmain/pyflared/issues"
Source = "https://github.com/Azmain/pyflared"

[project.scripts]
pyflared = "pyflared.cli:app"

[tool.hatch.metadata.hooks.custom]
binary_version = "latest"
wrapper_version = 1
[tool.hatch.build.hooks.custom]


[tool.hatch.envs.types]
extra-dependencies = [
    "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pyflared tests}"

[tool.hatch.envs.hatch-test]
dev-mode = false
extra-dependencies = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source_pkgs = ["pyflared", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
pyflared = ["src/pyflared", "*/pyflared/src/pyflared"]
tests = ["tests", "*/pyflared/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
